Added and Edited Files in serviceProvider Folder

--- a/serviceProvider/AddCar.html
+++ b/serviceProvider/AddCar.html
@@ -6,7 +6,7 @@
     	<ul>
             <li><a href="AddCar.html">Add Car</a></li>
             <li><a href="ViewRequest.jsp">View Service Request</a></li>
-            <li><a href="Accept/Deny.jsp">Update Request</a></li>
+            <li><a href="AcceptDeny.jsp">Update Request</a></li>
             <li><a href="ViewTransaction.jsp">View Transactions</a></li>
             <li><a href="#">Logout</a></li>
         </ul>
@@ -52,7 +52,7 @@
 		<input type="submit" value="submit">
 		</form>
    		<div align="center" colspan="2">
-   			<a href="ViewCars.jsp">View Cars</a>
+   			<a href="ViewCar.jsp">View Cars</a>
    		</div>
 	  </div>
  </body>
@@ -60,7 +60,7 @@
           <ul class="footer_ul">
               <li><a href="AddCar.html">Add Car</a></li>
                <li><a href="ViewRequest.jsp">View Service Request</a></li>
-               <li><a href="Accept/Deny.jsp">Update Request</a></li>
+               <li><a href="AcceptDeny.jsp">Update Request</a></li>
                <li><a href="ViewTransaction.jsp">View Transactions</a></li>
            </ul>
         <div class="footer">
