--- a/serviceProvider/index.html
+++ b/serviceProvider/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class="circlet">
          <!-- <div class="hvr-fade"> -->
-         <a href="AddCar.jsp">
+         <a href="AddCar.html">
           <img class="rounded-circle img-fluid d-block mx-auto" src="AddCar.png" alt="">
          </a>
           <h3></h3>
@@ -77,7 +77,7 @@
         </div>
         <div class="circlet">
           <!-- <div class="hvr-fade"> -->
-          <a href="Accept/Deny.jsp">
+          <a href="AcceptDeny.jsp">
             <img class="rounded-circle img-fluid d-block mx-auto" src="UpdateRequest.png" alt="">
           </a>
           <h3></h3>
