--- a/serviceProvider/index.html
+++ b/serviceProvider/index.html
@@ -41,7 +41,7 @@
               <a class="nav-link" href="#">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#">Logout</a>
             </li>
           </ul>
         </div>
@@ -63,7 +63,7 @@
         </div>
         <div class="circlet">
          <!-- <div class="hvr-fade"> -->
-         <a href="AddCar.jsp">
+         <a href="AddCar.html">
           <img class="rounded-circle img-fluid d-block mx-auto" src="AddCar.png" alt="">
          </a>
           <h3></h3>
@@ -77,14 +77,14 @@
         </div>
         <div class="circlet">
           <!-- <div class="hvr-fade"> -->
-          <a href="Accept/Deny.jsp">
+          <a href="insert.jsp">
             <img class="rounded-circle img-fluid d-block mx-auto" src="UpdateRequest.png" alt="">
           </a>
           <h3></h3>
         </div>
         <div class="circlet">
           <!-- <div class="hvr-fade"> -->
-          <a href="ViewTransaction.jsp">
+          <a href="ViewTransactions.jsp">
             <img class="rounded-circle img-fluid d-block mx-auto" src="ViewTransactions.png" alt="">
           </a>
           <h3></h3>
@@ -96,7 +96,7 @@
 
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+        <p class="m-0 text-center text-white">Developed by : Raoul and Friends &copy;2018</p>
       </div>
 
     </footer>
