--- a/serviceProvider/AddCar.html
+++ b/serviceProvider/AddCar.html
@@ -17,8 +17,6 @@
 
   </head>
 <body>
-<<<<<<< HEAD
-	<a class="navbar-brand" href="#">Service Provider Module</a><br>
       <div class="menu">
     	<ul>
             <li><a href="AddCar.html">Add Car</a></li>
@@ -26,8 +24,8 @@
             <li><a href="AcceptDeny.jsp">Update Request</a></li>
             <li><a href="ViewTransaction.jsp">View Transactions</a></li>
             <li><a href="#">Logout</a></li>
-        </ul>
-=======
+      </ul>
+
 	 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html">Service Provider Module</a>
@@ -60,7 +58,6 @@
             </li>
           </ul>
         </div>
->>>>>>> dc04590eaef0aeb2c9bce965333e33b7215b3dfe
       </div>
     </nav>
 
@@ -105,8 +102,8 @@
 		Current Mileage:<br>
 		<input type="text" name="current_Mileage" class="txt" >
 		<br>
-		Photo:<br>
-		<input type="text" name="photo" class="txt" >
+		Current Mileage:<br>
+    <input type="text" name="vehicle_Status" class="txt" >
 		<br><br>
 		<input type="submit" value="submit">
 		</form>
